[Fix] Todo text wrap

--- a/src/Todo/Todo.css
+++ b/src/Todo/Todo.css
@@ -7,6 +7,14 @@
   cursor: pointer;
 }
 
+.w-94 {
+  width: 94%;
+}
+
+/* .center-width {
+
+} */
+
 .shake-input {
   animation: shake 0.2s ease-in-out 0s 2;
 }
